Lint error resolved.

--- a/app/src/main/res/layout/layout_no_internet.xml
+++ b/app/src/main/res/layout/layout_no_internet.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tool="http://schemas.android.com/tools">
 
     <RelativeLayout
@@ -13,7 +14,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:src="@drawable/ic_portable_wifi_off_accent_50dp" />
+            app:srcCompat="@drawable/ic_portable_wifi_off_accent_50dp"
+            android:contentDescription="@string/content_description"/>
 
         <TextView
             style="@style/AppTheme.Normal"
