--- a/app/src/main/res/layout/expandible_group_item.xml
+++ b/app/src/main/res/layout/expandible_group_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,7 +18,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
-                android:src="@drawable/ic_add" />
+                app:srcCompat="@drawable/ic_add"
+                android:contentDescription="@string/content_description"/>
 
             <TextView
                 android:id="@+id/question"
