--- a/app/src/main/res/layout/fragment_pending_order.xml
+++ b/app/src/main/res/layout/fragment_pending_order.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <RelativeLayout
         android:id="@+id/root_layout"
@@ -23,15 +24,17 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_gravity="center"
-                android:src="@drawable/ic_date_picker" />
+                app:srcCompat="@drawable/ic_date_picker"
+                android:contentDescription="@string/content_description"/>
 
             <ImageView
                 android:id="@+id/image_view_close"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
-                android:src="@drawable/ic_close_primary"
-                android:visibility="gone" />
+                android:visibility="gone"
+                app:srcCompat="@drawable/ic_close_primary"
+                android:contentDescription="@string/content_description"/>
 
             <android.support.design.widget.TextInputEditText
                 android:id="@+id/text_date_range"
@@ -43,7 +46,7 @@
                 android:cursorVisible="false"
                 android:focusable="false"
                 android:focusableInTouchMode="false"
-                android:hint="Search from/to orders."
+                android:hint="@string/lbl_search_hint"
                 android:paddingEnd="@dimen/dp5"
                 android:paddingStart="@dimen/dp5"
                 android:textColor="@color/black_overlay"
