--- a/app/src/main/res/layout/fragment_shop_pictures.xml
+++ b/app/src/main/res/layout/fragment_shop_pictures.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <RelativeLayout
         android:id="@+id/root_layout"
@@ -20,7 +21,8 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_delete_white_24dp" />
+                app:srcCompat="@drawable/ic_delete_white_24dp"
+                android:contentDescription="@string/content_description"/>
         </com.andexert.library.RippleView>
 
         <android.support.v4.widget.SwipeRefreshLayout
