--- a/app/src/main/res/layout/layout_no_order_item.xml
+++ b/app/src/main/res/layout/layout_no_order_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -11,7 +12,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:src="@drawable/ic_empty_data_icon" />
+            app:srcCompat="@drawable/ic_empty_data_icon"
+            android:contentDescription="@string/content_description"/>
 
         <TextView
             android:id="@+id/txt_msg_no_item_found"
