--- a/app/src/main/res/layout/layout_order_details.xml
+++ b/app/src/main/res/layout/layout_order_details.xml
@@ -128,8 +128,8 @@
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_map_black"
-                    android:contentDescription="@string/content_description" />
+                    android:contentDescription="@string/content_description"
+                    app:srcCompat="@drawable/ic_map_black" />
             </com.andexert.library.RippleView>
         </LinearLayout>
 
