--- a/app/src/main/res/layout/layout_register_header.xml
+++ b/app/src/main/res/layout/layout_register_header.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -11,7 +12,8 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_flower_vendor" />
+            app:srcCompat="@drawable/ic_flower_vendor"
+            android:contentDescription="@string/content_description"/>
 
         <TextView
             style="@style/AppTheme.Title"
