--- a/app/src/main/res/layout/layout_todays_sales_report.xml
+++ b/app/src/main/res/layout/layout_todays_sales_report.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:id="@+id/todays_sales_wrapper"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
         android:layout_gravity="center"
         android:orientation="vertical"
         android:visibility="visible">
@@ -21,7 +21,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:src="@drawable/ic_wallet" />
+            app:srcCompat="@drawable/ic_wallet"
+            android:contentDescription="@string/content_description"/>
 
         <TextView
             android:id="@+id/total_sales"
