--- a/app/src/main/res/layout/shop_pictures_item_row.xml
+++ b/app/src/main/res/layout/shop_pictures_item_row.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -13,7 +14,8 @@
             android:layout_height="120dp"
             android:background="@drawable/flower_image_frame"
             android:padding="@dimen/dp2"
-            android:scaleType="fitXY" />
+            android:scaleType="fitXY"
+            android:contentDescription="@string/content_description"/>
 
         <ImageView
             android:id="@+id/image_view_selected"
@@ -21,8 +23,9 @@
             android:layout_height="wrap_content"
             android:layout_gravity="end|top"
             android:layout_margin="@dimen/dp2"
-            android:src="@drawable/ic_check_24dp"
-            android:visibility="gone" />
+            app:srcCompat="@drawable/ic_check_24dp"
+            android:visibility="gone"
+            android:contentDescription="@string/content_description"/>
 
         <TextView
             android:id="@+id/text_view_picture_upload"
