--- a/app/src/main/res/layout/upload_data_row.xml
+++ b/app/src/main/res/layout/upload_data_row.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,7 +22,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_weight="0.1"
-            android:src="@drawable/ic_close_white_24dp" />
+            app:srcCompat="@drawable/ic_close_white_24dp"
+            android:contentDescription="@string/content_description"/>
 
     </LinearLayout>
 </layout>
