--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,4 +17,5 @@
     <dimen name="cardview_default_corner_radius">5dp</dimen>
     <dimen name="dp20">20dp</dimen>
     <dimen name="sp15">15sp</dimen>
+    <dimen name="dp28">28dp</dimen>
 </resources>
