--- a/app/src/main/res/layout/layout_preview_image.xml
+++ b/app/src/main/res/layout/layout_preview_image.xml
@@ -5,24 +5,21 @@
 
     <ImageView
         android:id="@+id/image_view_preview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
         android:layout_gravity="center"
+        android:adjustViewBounds="true"
         android:contentDescription="@string/content_description"
-        android:layout_marginTop="?actionBarSize"
-        android:layout_marginEnd="@dimen/dp10"
-        android:layout_marginStart="@dimen/dp10"
-        android:layout_marginBottom="@dimen/dp32"
-        android:visibility="gone"/>
+        android:scaleType="fitXY"
+        android:visibility="gone" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/image_view_close"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_close_white_24dp"
-        app:layout_anchor="@id/image_view_preview"
-        app:layout_anchorGravity="top|right|end"
         android:visibility="gone"
         app:fabSize="mini"
-        android:layout_margin="@dimen/dp28"/>
+        app:layout_anchor="@id/image_view_preview"
+        app:layout_anchorGravity="top|right|end" />
 </android.support.design.widget.CoordinatorLayout>
