--- a/app/src/main/res/layout/fragment_sales_graph.xml
+++ b/app/src/main/res/layout/fragment_sales_graph.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/root_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/title_sales_graph"
             style="@style/TextTheme.Title.Black"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_margin="@dimen/dp16"
+            android:layout_marginTop="@dimen/dp16"
             android:gravity="center_horizontal"
             android:text="@string/sales_stat_title" />
 
@@ -24,10 +24,8 @@
             android:id="@+id/graph_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_below="@id/title_sales_graph"
             android:layout_margin="@dimen/dp16"
             android:visibility="gone" />
 
-    </RelativeLayout>
+    </LinearLayout>
 </layout>
